[package]
name = "end_to_end_encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.91"
poem = { version = "1.3.40", features = ["websocket", "static-files"] }
tokio = { version = "1.21.0", features = ["full"] }
futures-util = "0.3.17"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
parking_lot = "0.12.1"